antismash/outputs/html/css/style.scss
/* ... */
.dhb {
    @include bold;
    color: mediumorchid;
}

.cys {
    @include bold;
    color: royalblue;
}

.macrolactam {
    @include bold;
    color: red;
}

.cut {
    @include bold;
    color: purple;
}

.separator-text {
    font-size: 80%;
    padding-top: 1em;
}

.description-text, .cluster-rules-header {
    font-size: 85%;
}

.alt-weight-desc {
    @extend .description-text;
}

.alt-weight-n {
    @extend .alt-weight-desc;
    padding-left: 2.5em;
}

.region-download {
    font-size: 75%;
    float: right;
    padding: 5px;
    margin-right: 20px;
    border-radius: 5px;
    background-color: #eee;
}

.cluster-rules {
    font-size: 75%;
    display: none;
    border: 1px solid $tooltip-border;
    background-color: $tooltip-background;
}

.description-container {
    @include left-padding;
}

.contig-edge-warning {
    font-size: 75%;
    @include bold;
    float: right;
    color: black;
    background-color: orange;
    padding: 5px;
    margin-right: 20px;
    border-radius: 5px;
}

table {
    border-collapse: collapse;
}

.overview-layout {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: space-between;
    padding-left: 0.5em;

    & .overview-switches {
        padding-left: 0.5em;
        padding-right: 0.5em;
        min-width: 10em;
    }
}

table.region-table {
    padding: 0;
    th {
        margin: 0.2em 0.5em;
        padding: 0 0.5em;
    }

    .even {
        background-color: $table-background;
    }

    td {
        margin: 0.2em 0.5em;
        padding: 0.2em 0.5em;
    }

    .digits {
        text-align: right;
    }

    .linked-row {
        cursor: pointer;
    }
}

.record-overview-header {
    background-color: #ddd;
    padding-top: 0.5em;
}

.record-overview-details {
    padding-left: 1em;
    padding-bottom: 1em;
    margin-top: 0.5em;
}

.tooltip {
    /* match style of nav */
    background-image: linear-gradient(to bottom, #5e5e5e 0%, #444 100%);
    background-repeat: repeat-x;
    color: #e1e1e1;
    font-weight: normal;

    display: none;
    border-radius: 0.2em;
    width: 35vw;
    padding: 0.5em;

    /* start halfway down and keep to the left of the container */
    position: absolute;
    top: 50%;
    right: 105%;

    z-index: 1; /* otherwise switches and other ':after' styles can display on top */
}

.similarity-text {
    color: $antismash-gray;
}

.svgene-type-other {
    fill: $gene-type-other;
    stroke: black;
}
.svgene-type-biosynthetic {
    fill: $gene-type-biosynthetic;
    stroke: black;
}
.svgene-type-biosynthetic-additional {
    fill: $gene-type-biosynthetic-additional;
    stroke: black;
}
.svgene-type-transport {
    fill: $gene-type-transport;
    stroke: black;
}
.svgene-type-regulatory {
    fill: $gene-type-regulatory;
    stroke: black;
}
.svgene-resistance {
    fill: $feature-resistance;
}
.svgene-tta-codon {
    fill: $feature-tta-codon;
}
.cluster-line, .centerline {
    stroke-width: 1px;
    stroke: #888;
}
.svgene-locustag {
    @extend .serif;
    fill: $antismash-main;
    display: none;
    font-size: 85%;
}

.cluster-core {
    stroke: black;
    stroke-width: 1px;
    fill: $kind-protoclusters;
}

.svgene-border-cassis .cluster-core {
    stroke: black;
    stroke-width: 1px;
    fill: $tool-cassis;
}

.svgene-orf, .svgene-minimap-orf{
    stroke-width: 0;
}

.svgene-selected-orf {
    stroke: #000;
    stroke-width: 1px;
}

.legend-items, .zoom-buttons {
    display: flex;
    justify-content: center;
}

.button-like {
    display: flex;
    align-items: center;
    border: 1px solid lightgrey;
    border-radius: 0.5em;
    margin-left: 1em;
    padding: 0.5em;
    padding-top: 0.3em;
    box-shadow: inset 0 -2px 2px grey;
    cursor: default;
    font-size: 80%;

    @include unselectable();

    &:hover {
        background-color: #fcfcfc;
        box-shadow: inset 0 2px 5px grey;
    }

    &:active {
        background-color: #eee;
        box-shadow: inset 0 2px 5px grey;
    }
    & * {
        cursor: default;
        @include unselectable();
    }
    & img {
        height: 1.5em;
        padding-right: 0.5em;
    }
}

.legend-selected {
    background-color: #eee;
    box-shadow: inset 0 2px 5px grey;
}

.legend-selector * {
    cursor: default;
}

.legend-selector-static {
    display: flex;
    align-items: center;
    border: 1px solid lightgrey;
    border-radius: 0.5em;
    margin-left: 1em;
    padding: 0.5em;
    padding-top: 0.3em;
    cursor: default;
    font-size: 80%;
    & * {
        cursor: default;
    }
}

.legend-type-other {
    background-color: $gene-type-other;
}
.legend-type-biosynthetic {
    background-color: $gene-type-biosynthetic;
}
.legend-type-biosynthetic-additional {
    background-color: $gene-type-biosynthetic-additional;
}
.legend-type-transport {
    background-color: $gene-type-transport;
}
.legend-type-regulatory {
    background-color: $gene-type-regulatory;
}

.legend-border-cassis {
    background-color: $tool-cassis;
}

.legend-tta-codon {
    background-color: $feature-tta-codon;
}
.legend-resistance {
    background-color: $feature-resistance;
}

.legend {
    h4 {
        margin-bottom: 0.5em;
    }
    margin-bottom: 0.5em;
    @include left-padding;
}

.legend-symbol {
    float: left;
    width: 1em;
    height: 1em;
    margin-right: 0.25em;
}

.legend-field {
    @extend .legend-symbol;
    border: 1px solid black;
}

.legend-label {
    float: left;
    @include unselectable();
}

.zoom-button {
    background-color: white;
    border: 1px solid lightgrey;
    border-radius: 0.5em;
    box-shadow: inset 0 -2px 2px grey;
    font-size: 80%;
    margin-left: 1em;
    padding: 0.5em;

    @include unselectable();

    &:hover {
        background-color: #fcfcfc;
        box-shadow: inset 0 2px 5px grey;
    }

    &:active {
        background-color: #eee;
        box-shadow: inset 0 2px 5px grey;
    }
}

.details-text {
    padding-bottom: 0.5em;
}
/* ... */

